Replace crystal_functions -> CRYSTALpy and file_readwrite -> crystal_io

--- a/examples/calculate.ipynb
+++ b/examples/calculate.ipynb
@@ -26,18 +26,18 @@
    "outputs": [
     {
      "ename": "ImportError",
-     "evalue": "cannot import name 'cry_bsse' from 'crystal_functions.calculate' (/Users/brunocamino/miniconda3/envs/test_env/lib/python3.9/site-packages/crystal_functions/calculate.py)",
+     "evalue": "cannot import name 'cry_bsse' from 'CRYSTALpy.calculate' (/Users/brunocamino/miniconda3/envs/test_env/lib/python3.9/site-packages/CRYSTALpy/calculate.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/f2/8kc7y9697m59bwltxjd42y300000gn/T/ipykernel_6345/1711536738.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcrystal_functions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalculate\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcry_bsse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'cry_bsse' from 'crystal_functions.calculate' (/Users/brunocamino/miniconda3/envs/test_env/lib/python3.9/site-packages/crystal_functions/calculate.py)"
+      "\u001b[0;32m/var/folders/f2/8kc7y9697m59bwltxjd42y300000gn/T/ipykernel_6345/1711536738.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mCRYSTALpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalculate\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcry_bsse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'cry_bsse' from 'CRYSTALpy.calculate' (/Users/brunocamino/miniconda3/envs/test_env/lib/python3.9/site-packages/CRYSTALpy/calculate.py)"
      ]
     }
    ],
    "source": [
-    "from crystal_functions.calculate import cry_bsse"
+    "from CRYSTALpy.calculate import cry_bsse"
    ]
   },
   {
@@ -80,7 +80,7 @@
     "from pymatgen.symmetry.analyzer import SpacegroupAnalyzer\n",
     "from pymatgen.core.surface import SlabGenerator\n",
     "\n",
-    "#from cry_file_readwrite import write_gui \n",
+    "#from cry_crystal_io import write_gui \n",
     "import numpy as np\n",
     "\n",
     "substrate = Structure.from_spacegroup(\"Fm-3m\", Lattice.cubic(3.597), [\"Cu\"], [[0, 0, 0]])\n",
