--- a/examples/convert.ipynb
+++ b/examples/convert.ipynb
@@ -31,36 +31,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_output\n",
-    "from crystal_functions.convert import cry_out2pmg"
+    "from CRYSTALpy.crystal_io import Crystal_output\n",
+    "from CRYSTALpy.convert import cry_out2pmg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "814523e2",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.        , 2.12011001, 2.12011001],\n",
-       "       [2.12011001, 0.        , 2.12011001],\n",
-       "       [2.12011001, 2.12011001, 0.        ]])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pymatgen.core.structure.Structure'>\n"
+     ]
     }
    ],
    "source": [
     "cry_output = Crystal_output()\n",
     "cry_output.read_cry_output('data/mgo_optgeom.out')\n",
     "pmg_structure = cry_out2pmg(cry_output,initial=False)\n",
-    "pmg_structure.lattice.matrix"
+    "pmg_structure.lattice.matrix\n",
+    "print(type(pmg_structure))"
    ]
   },
   {
@@ -78,8 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_output, Crystal_gui\n",
-    "from crystal_functions.convert import cry_gui2pmg"
+    "from CRYSTALpy.crystal_io import Crystal_output, Crystal_gui\n",
+    "from CRYSTALpy.convert import cry_gui2pmg"
    ]
   },
   {
@@ -135,8 +131,8 @@
    ],
    "source": [
     "from pymatgen.core.surface import Structure, Lattice\n",
-    "from crystal_functions.convert import cry_pmg2gui\n",
-    "from crystal_functions.file_readwrite import write_crystal_gui\n",
+    "from CRYSTALpy.convert import cry_pmg2gui\n",
+    "from CRYSTALpy.crystal_io import write_crystal_gui\n",
     "\n",
     "lattice = Lattice.cubic(3.)\n",
     "mgo_pmg_obj = Structure(lattice, [\"Mg\", \"O\"],\n",
@@ -169,8 +165,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_output, Properties_output\n",
-    "from crystal_functions.convert import cry_bands2pmg"
+    "from CRYSTALpy.crystal_io import Crystal_output, Properties_output\n",
+    "from CRYSTALpy.convert import cry_bands2pmg"
    ]
   },
   {
@@ -272,8 +268,8 @@
     }
    ],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_gui\n",
-    "from crystal_functions.convert import cry_gui2ase\n",
+    "from CRYSTALpy.crystal_io import Crystal_gui\n",
+    "from CRYSTALpy.convert import cry_gui2ase\n",
     "\n",
     "mgo_gui = Crystal_gui()\n",
     "mgo_gui.read_cry_gui('data/mgo_optgeom.gui')\n",
@@ -296,8 +292,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import write_crystal_gui\n",
-    "from crystal_functions.convert import cry_ase2gui\n",
+    "from CRYSTALpy.crystal_io import write_crystal_gui\n",
+    "from CRYSTALpy.convert import cry_ase2gui\n",
     "\n",
     "from ase.build import bulk\n",
     "\n",
@@ -333,8 +329,8 @@
     }
    ],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_output\n",
-    "from crystal_functions.convert import cry_out2ase\n",
+    "from CRYSTALpy.crystal_io import Crystal_output\n",
+    "from CRYSTALpy.convert import cry_out2ase\n",
     "\n",
     "mgo_out = Crystal_output()\n",
     "mgo_out.read_cry_output('data/mgo_optgeom.out')\n",
@@ -365,8 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_gui\n",
-    "from crystal_functions.convert import cry_gui2cif\n",
+    "from CRYSTALpy.crystal_io import Crystal_gui\n",
+    "from CRYSTALpy.convert import cry_gui2cif\n",
     "\n",
     "mgo_gui = Crystal_gui()\n",
     "mgo_gui.read_cry_gui('data/mgo_optgeom.gui')\n",
@@ -434,8 +430,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_output\n",
-    "from crystal_functions.convert import cry_gui2cif\n",
+    "from CRYSTALpy.crystal_io import Crystal_output\n",
+    "from CRYSTALpy.convert import cry_gui2cif\n",
     "\n",
     "mgo_out = Crystal_output()\n",
     "mgo_out.read_cry_output('data/mgo_optgeom.out')\n",
@@ -460,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
