--- a/examples/file_readwrite.ipynb
+++ b/examples/file_readwrite.ipynb
@@ -5,7 +5,7 @@
    "id": "68158073",
    "metadata": {},
    "source": [
-    "# Example notebook for the functions contained in cry_file_readwrite.py"
+    "# Example notebook for the functions contained in cry_crystal_io.py"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_input"
+    "from CRYSTALpy.crystal_io import Crystal_input"
    ]
   },
   {
@@ -137,12 +137,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "0a495139",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_output"
+    "from CRYSTALpy.crystal_io import Crystal_output"
    ]
   },
   {
@@ -155,17 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "bfb6e6f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<crystal_functions.file_readwrite.Crystal_output at 0x107d63be0>"
+       "<CRYSTALpy.crystal_io.Crystal_output at 0x10a4a3040>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "0bf048c7",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Properties_output"
+    "from CRYSTALpy.crystal_io import Properties_output"
    ]
   },
   {
@@ -457,7 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "<crystal_functions.file_readwrite.Properties_output at 0x13b54b6d0>"
+       "<CRYSTALpy.crystal_io.Properties_output at 0x1640857f0>"
       ]
      },
      "execution_count": 11,
@@ -490,7 +490,7 @@
     {
      "data": {
       "text/plain": [
-       "<crystal_functions.file_readwrite.Properties_output at 0x13b485b80>"
+       "<CRYSTALpy.crystal_io.Properties_output at 0x164085820>"
       ]
      },
      "execution_count": 12,
@@ -519,8 +519,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_input\n",
-    "from crystal_functions.file_readwrite import write_crystal_input"
+    "from CRYSTALpy.crystal_io import Crystal_input\n",
+    "from CRYSTALpy.crystal_io import write_crystal_input"
    ]
   },
   {
@@ -672,8 +672,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Properties_input\n",
-    "from crystal_functions.file_readwrite import write_properties_input\n",
+    "from CRYSTALpy.crystal_io import Properties_input\n",
+    "from CRYSTALpy.crystal_io import write_properties_input\n",
     "\n",
     "#Create the bands input object\n",
     "bands_input = Properties_input()\n",
@@ -736,10 +736,10 @@
     "from pymatgen.symmetry.bandstructure import HighSymmKpath\n",
     "from pymatgen.symmetry.analyzer import SpacegroupAnalyzer\n",
     "\n",
-    "from crystal_functions.file_readwrite import write_properties_input\n",
-    "from crystal_functions.file_readwrite import Crystal_output\n",
-    "from crystal_functions.file_readwrite import Properties_input\n",
-    "from crystal_functions.convert import cry_out2pmg\n",
+    "from CRYSTALpy.crystal_io import write_properties_input\n",
+    "from CRYSTALpy.crystal_io import Crystal_output\n",
+    "from CRYSTALpy.crystal_io import Properties_input\n",
+    "from CRYSTALpy.convert import cry_out2pmg\n",
     "\n",
     "\n",
     "#Create the bands input object\n",
@@ -814,8 +814,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import write_properties_input\n",
-    "from crystal_functions.file_readwrite import Properties_input\n",
+    "from CRYSTALpy.crystal_io import write_properties_input\n",
+    "from CRYSTALpy.crystal_io import Properties_input\n",
     "\n",
     "#Create the doss input object\n",
     "doss_input = Properties_input()\n",
@@ -869,8 +869,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import write_properties_input\n",
-    "from crystal_functions.file_readwrite import Properties_input\n",
+    "from CRYSTALpy.crystal_io import write_properties_input\n",
+    "from CRYSTALpy.crystal_io import Properties_input\n",
     "\n",
     "#Create the doss input object\n",
     "pdoss_input = Properties_input()\n",
@@ -926,8 +926,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import write_properties_input\n",
-    "from crystal_functions.file_readwrite import Properties_input\n",
+    "from CRYSTALpy.crystal_io import write_properties_input\n",
+    "from CRYSTALpy.crystal_io import Properties_input\n",
     "\n",
     "#Create the doss input object\n",
     "pdoss_input = Properties_input()\n",
@@ -1000,8 +1000,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_gui, write_crystal_gui\n",
-    "from crystal_functions.convert import cry_pmg2gui\n",
+    "from CRYSTALpy.crystal_io import Crystal_gui, write_crystal_gui\n",
+    "from CRYSTALpy.convert import cry_pmg2gui\n",
     "\n",
     "from pymatgen.core import Structure, Lattice\n",
     "\n",
@@ -1192,8 +1192,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(1,'../crystal_functions/')\n",
-    "from file_readwrite import *\n",
+    "sys.path.insert(1,'../CRYSTALpy/')\n",
+    "from crystal_io import *\n",
     "from convert import *"
    ]
   },
@@ -1204,7 +1204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from crystal_functions.file_readwrite import write_crystal_gui\n",
+    "#from CRYSTALpy.crystal_io import write_crystal_gui\n",
     "\n",
     "from pymatgen.core import Structure, Lattice\n",
     "from pymatgen.core.surface import SlabGenerator\n",
