--- a/examples/thermo-HA.ipynb
+++ b/examples/thermo-HA.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "The script 'thermodyanmics.py' is a comprehensive module for lattice dynamics based on harmonic and quasi-harmonic level of theory. For simplicity, this tutorial is focused only on harmonic phonons. For quasi-harmonic part, please refer to 'thermodynamics-QHA'.\n",
     "\n",
-    "**Classes used in this tutorial are defined in 'crystal_functions.thermodynamics'. Documentations and source codes are attached at the bottom of this page.**"
+    "**Classes used in this tutorial are defined in 'CRYSTALpy.thermodynamics'. Documentations and source codes are attached at the bottom of this page.**"
    ]
   },
   {
@@ -59,8 +59,8 @@
     }
    ],
    "source": [
-    "from crystal_functions import thermodynamics\n",
-    "from crystal_functions.thermodynamics import Harmonic\n",
+    "from CRYSTALpy import thermodynamics\n",
+    "from CRYSTALpy.thermodynamics import Harmonic\n",
     "\n",
     "rm_condition = Harmonic(write_out=False).from_file(\n",
     "    'data/freqf1-r0.out', scelphono=[[1, 0, 0], [0, 1, 0], [0, 0, 1]], auto_calc=False\n",
@@ -439,7 +439,7 @@
     {
      "data": {
       "text/plain": [
-       "<crystal_functions.thermodynamics.Harmonic at 0x7f4c65efd490>"
+       "<CRYSTALpy.thermodynamics.Harmonic at 0x7f4c65efd490>"
       ]
      },
      "execution_count": 4,
