--- a/unit_test/test_notebook.ipynb
+++ b/unit_test/test_notebook.ipynb
@@ -68,7 +68,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>geom_block</th>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>bs_block</th>\n",
@@ -80,7 +80,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>scf_block</th>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>add_ghost</th>\n",
@@ -92,21 +92,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>opt_to_sp</th>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               0\n",
-       "geom_block  True\n",
-       "bs_block    True\n",
-       "func_block  True\n",
-       "scf_block   True\n",
-       "add_ghost   True\n",
-       "sp_to_opt   True\n",
-       "opt_to_sp   True"
+       "                0\n",
+       "geom_block  False\n",
+       "bs_block     True\n",
+       "func_block   True\n",
+       "scf_block   False\n",
+       "add_ghost    True\n",
+       "sp_to_opt    True\n",
+       "opt_to_sp   False"
       ]
      },
      "execution_count": 1,
@@ -179,11 +179,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>get_final_energy</th>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>get_scf_convergence</th>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>get_num_cycles</th>\n",
@@ -199,7 +199,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>get_reciprocal_lattice</th>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>get_band_gap</th>\n",
@@ -226,20 +226,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                           0\n",
-       "converged               True\n",
-       "get_dimensionality      True\n",
-       "get_final_energy        True\n",
-       "get_scf_convergence     True\n",
-       "get_num_cycles          True\n",
-       "get_fermi_energy        True\n",
-       "get_primitive_lattice   True\n",
-       "get_reciprocal_lattice  True\n",
-       "get_band_gap            True\n",
-       "get_last_geom           True\n",
-       "get_symm_ops            True\n",
-       "get_forces              True\n",
-       "get_mulliken_charges    True"
+       "                            0\n",
+       "converged                True\n",
+       "get_dimensionality       True\n",
+       "get_final_energy        False\n",
+       "get_scf_convergence     False\n",
+       "get_num_cycles           True\n",
+       "get_fermi_energy         True\n",
+       "get_primitive_lattice    True\n",
+       "get_reciprocal_lattice  False\n",
+       "get_band_gap             True\n",
+       "get_last_geom            True\n",
+       "get_symm_ops             True\n",
+       "get_forces               True\n",
+       "get_mulliken_charges     True"
       ]
      },
      "execution_count": 2,
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "05f5b390",
    "metadata": {},
    "outputs": [
@@ -343,13 +343,13 @@
       "\n",
       "File for input testing: ./data_test/mgo.d12\n",
       "\n",
-      "geom_block True\n",
+      "geom_block False\n",
       "bs_block True\n",
       "func_block True\n",
-      "scf_block True\n",
+      "scf_block False\n",
       "add_ghost True\n",
       "sp_to_opt True\n",
-      "opt_to_sp True\n",
+      "opt_to_sp False\n",
       "\n",
       "**Testing of the Crystal_output class:**\n",
       "\n",
@@ -357,12 +357,12 @@
       "\n",
       "converged True\n",
       "get_dimensionality True\n",
-      "get_final_energy True\n",
-      "get_scf_convergence True\n",
+      "get_final_energy False\n",
+      "get_scf_convergence False\n",
       "get_num_cycles True\n",
       "get_fermi_energy True\n",
       "get_primitive_lattice True\n",
-      "get_reciprocal_lattice True\n",
+      "get_reciprocal_lattice False\n",
       "get_band_gap True\n",
       "get_last_geom True\n",
       "get_symm_ops True\n",
