Replace crystal_functions -> CRYSTALpy and file_readwrite -> crystal_io

--- a/unit_test/test_notebook.ipynb
+++ b/unit_test/test_notebook.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Unit tests notebook\n",
     "\n",
-    "For testing the crystal_functions please run this notebook.\n",
+    "For testing the CRYSTALpy please run this notebook.\n",
     "\n",
     "Alternatively, you can run test_all(folder_path) from command line."
    ]
@@ -17,7 +17,7 @@
    "id": "1fca47e0",
    "metadata": {},
    "source": [
-    "# file_readwrite"
+    "# crystal_io"
    ]
   },
   {
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "from crystal_functions.unit_test import *\n",
+    "from CRYSTALpy.unit_test import *\n",
     "import pandas as pd\n",
     "\n",
     "input_test = crystal_input_test('./data_test/')\n",
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "from crystal_functions.unit_test import *\n",
+    "from CRYSTALpy.unit_test import *\n",
     "import pandas as pd\n",
     "\n",
     "output_test = crystal_output_test('./data_test/')\n",
@@ -319,7 +319,7 @@
     }
    ],
    "source": [
-    "from crystal_functions.unit_test import *\n",
+    "from CRYSTALpy.unit_test import *\n",
     "import pandas as pd\n",
     "\n",
     "output_test = convert_test('./data_test/')\n",
@@ -337,7 +337,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***Testing of the file_readwrite module:***\n",
+      "***Testing of the crystal_io module:***\n",
       "\n",
       "**Testing of the Crystal_input class:**\n",
       "\n",
@@ -377,7 +377,7 @@
     }
    ],
    "source": [
-    "from crystal_functions.unit_test import *\n",
+    "from CRYSTALpy.unit_test import *\n",
     "test_all('./data_test/')"
    ]
   }
